feat: home screen

--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -1,3 +1,120 @@
 {
-  "home": "HEllo"
+  "home": {
+    "links": {
+      "1": "Введение",
+      "2": "Определения",
+      "3": "Перечень сокращений"
+    },
+    "content": {
+      "1": {
+        "title": "Введение",
+        "info": "<p>\tВакцины являются одним из величайших достижений в области глобального здравоохранения и развития. На протяжении более двух столетий они безопасно сокращали масштабы таких заболеваний, как полиомиелит, корь и оспа, помогая детям расти счастливыми и здоровыми. В настоящее время в мире существуют вакцины для профилактики более 20 опасных для жизни заболеваний, помогающие людям всех возрастов жить дольше и здоровее. Иммунизация в настоящее время предотвращает 3,5-5 миллионов смертей ежегодно от таких заболеваний, как дифтерия, столбняк, коклюш, грипп и корь [1]. Вакцинация является ключевым компонентом первичной медико-санитарной помощи (ПМСП) и неоспоримым правом человека. Это также одна из лучших инвестиций в здравоохранение, которую можно купить за деньги. Вакцины также имеют решающее значение для профилактики вспышек инфекционных заболеваний и борьбы с ними. Они лежат в основе глобальной безопасности здравоохранения и станут жизненно важным инструментом в борьбе с устойчивостью к противомикробным препаратам [2].</p><p>\tБлагодаря усилиям по иммунизации во всем мире дети могут ходить, играть, танцевать и учиться. Привитые дети лучше учатся в школе, а экономические выгоды распространяются на все их сообщества. Сегодня вакцины, по оценкам, являются одним из наиболее экономически эффективных средств повышения национального благосостояния [3]. Пандемия COVID-19, связанные с ней нарушения и усилия по вакцинации от COVID-19 оказали давление на системы здравоохранения в 2020 и 2021 годах, приводя к значительным сбоям вакцинации. Однако с глобальной точки зрения восстановление не за горами - в 2022 году охват иммунизацией против дифтерии, коклюша и столбняка (АКДС), хотя и неравномерно в разных странах, почти восстановился до уровня 2019 года [4].</p><p>\tВ Казахстане вакцинация регулируется Постановлением Правительства Республики Казахстан от 24 сентября 2020 года №612. «Об утверждении перечня заболеваний, против которых проводятся обязательные профилактические прививки в рамках гарантированного объема бесплатной медицинской помощи (ГОБМП), правил, сроков их проведения и групп населения, подлежащих профилактическим прививкам», Приказом Министра здравоохранения Республики Казахстан от 21 октября 2020 года № ҚР ДСМ-146/2020 «Об утверждении перечня медицинских противопоказаний к проведению профилактических прививок», Приказом и.о. Министра здравоохранения Республики Казахстан от 21 сентября 2023 года №150. Об утверждении Санитарных правил «Санитарно-эпидемиологические требования к организации и проведению профилактических прививок населению», Приказом Министра здравоохранения Республики Казахстан от 2 декабря 2022 года № ҚР ДСМ-151. Об утверждении Санитарных правил «Санитарно-эпидемиологические требования к организации и проведению санитарно-противоэпидемических, санитарно-профилактических мероприятий по предупреждению инфекций, связанных с оказанием медицинской помощи», Приказом Министра здравоохранения Республики Казахстан от 21 октября 2020 года № ҚР ДСМ-146/2020 «Перечень медицинских противопоказаний к проведению профилактических прививок», Приказом Министра здравоохранения Республики Казахстан от 30 ноября 2020 года № ҚР ДСМ-214/2020. «Об утверждении правил проведения мероприятий по профилактике туберкулеза». Постановлением Правительства Республики Казахстан от 20 февраля 2024 года № 102 «О внесении изменений в постановление Правительства Республики Казахстан от 24 сентября 2020 года № 612 «Об утверждении перечня заболеваний, против которых проводятся обязательные профилактические прививки в рамках гарантированного объема медицинской помощи, правил, сроков их проведения и групп населения, подлежащих профилактическим прививкам». Постановление Правительства Республики Казахстан от 20 февраля 2024 года № 102 «О внесении изменений в постановление Правительства Республики Казахстан от 24 сентября 2020 года № 612 'Об утверждении перечня заболеваний, против которых проводятся обязательные профилактические прививки в рамках гарантированного объема медицинской помощи, правил, сроков их проведения и групп населения, подлежащих профилактическим прививкам»\tI. За счет средств республиканского бюджета проводятся обязательные профилактические прививки (введение вакцин) против следующих инфекционных заболеваний после получения информированного согласия прививаемого лица на проведение вакцинации:</p><p>\t1) плановые профилактические прививки: заболевание, вызванное вирусом папилломы человека; \n\t2)профилактические прививки по эпидемиологическим показаниям: коронавирусная инфекция. \n\tII. За счет средств местных бюджетов проводятся обязательные профилактические прививки (введение вакцин и других иммунобиологических препаратов) против следующих инфекционных и паразитарных заболеваний после получения информированного согласия прививаемого лица на проведение вакцинации: \n\t1) плановые профилактические прививки: \n\tвирусный гепатит 'А'; \n\tвирусный гепатит 'В'; \n\tгемофильная инфекция типа b; \n\tдифтерия; \n\tкоклюш; \n\tкорь; \n\tкраснуха; \n\tпневмококковая инфекция; \n\tполиомиелит; \n\tстолбняк; \n\tтуберкулез; \n\tэпидемический паротит; \n\t2) профилактические прививки по эпидемиологическим показаниям: \n\tвирусный гепатит 'А'; \n\tвирусный гепатит 'В'; \n\tдифтерия; \n\tвесенне-летний клещевой энцефалит; \n\tсибирская язва; \n\tбешенство; \n\tкорь; \n\tкраснуха; \n\tчума; \n\tстолбняк; \n\tтуляремия; \n\tгрипп; \n\tбрюшной тиф; \n\tэпидемический паротит.</p>"
+      },
+      "2": {
+        "title": "Определения",
+        "info": "<p>\t\t<r>Анатоксины</r> – иммунобиологические лекарственные препараты, приготовленные из токсина или полученные по рекомбинантной технологии, не имеющие выраженных токсических свойств, способные индуцировать выработку антител к исходному токсину; \n\t\t<r>Вакцины</r> – лекарственные препараты для специфической профилактики инфекционных заболеваний, оказывающие профилактический эффект через иммунную систему. \n\t\t<r>Живые вакцины</r> – вакцины, приготовленные из живых ослабленных микроорганизмов. \n\t\t<r>Иммуноглобулины</r> – иммунобиологические лекарственные препараты, изготовленные из сыворотки крови человека и животных, а также моноклональные антитела, применяемые с целью экстренной профилактики и лечения инфекционных заболеваний. \n\t\t<r>Иммунологический лекарственный препарат (иммунобиологический лекарственный препарат) (ИЛП)</r> – лекарственный препарат, предназначенный для формирования активного или пассивного иммунитета или диагностики наличия иммунитета или диагностики (выработки) специфического приобретенного изменения иммунологического ответа на аллергизирующие вещества. \n\t\t<r>Инактивированные вакцины</r> – вакцины, приготовленные из убитых микроорганизмов или из отдельных компонентов микробной клетки и продуктов их жизнедеятельности, а также полученные другими биотехнологическими методами. \n\t\t<r>Неблагоприятные проявления после иммунизации (НППИ)</r> – медицинский случай, имеющий место после иммунизации, вызывающий обеспокоенность у медицинского работника или населения и предположительно вызванный иммунизацией.</p>"
+      },
+      "3": {
+        "title": "Перечень сокращений, условных обозначений, символов",
+        "data": [
+          {
+            "key": "АКДС",
+            "description": "Адсорбированная коклюшно-дифтерийно-столбнячная вакцина"
+          },
+          {
+            "key": "ВИЧ",
+            "description": "Вирус иммунодефицита человека"
+          },
+          {
+            "key": "ВЛКЭ",
+            "description": "Весенне-летний клещевой энцефалит"
+          },
+          {
+            "key": "ГОБМП",
+            "description": "Гарантированный объем бесплатной медицинской помощи"
+          },
+          {
+            "key": "ИВ",
+            "description": "Инактивированная вакцина"
+          },
+          {
+            "key": "ИЛП",
+            "description": "Иммунобиологический лекарственный препарат"
+          },
+          {
+            "key": "ИПВ",
+            "description": "Инактивированная полиомиелитная вакцина"
+          },
+          {
+            "key": "НППИ",
+            "description": "Неблагоприятные проявления после иммунизации"
+          },
+          {
+            "key": "ОЖВ",
+            "description": "Оральная живая вакцина"
+          },
+          {
+            "key": "ПМСП",
+            "description": "Первичная медико-санитарная помощь"
+          },
+          {
+            "key": "СПИД",
+            "description": "Синдром приобретенного иммунодефицита"
+          },
+          {
+            "key": "BCG",
+            "description": "Bacillus Calmette-Guérin"
+          },
+          {
+            "key": "COVID-19",
+            "description": "COronaVIrus Disease 2019"
+          },
+          {
+            "key": "DTP",
+            "description": "Diphtheria-tetanus and pertussis"
+          },
+          {
+            "key": "HAV",
+            "description": "Hepatitis A Virus"
+          },
+          {
+            "key": "Hib",
+            "description": "Haemophilus influenzae типа b"
+          },
+          {
+            "key": "HBsAg",
+            "description": "Hepatitis B surface antigen"
+          },
+          {
+            "key": "HBV",
+            "description": "Hepatitis B Virus"
+          },
+          {
+            "key": "MMR",
+            "description": "Measles, mumps and rubella"
+          },
+          {
+            "key": "MT",
+            "description": "Mycobacterium tuberculosis"
+          },
+          {
+            "key": "Vi-PS",
+            "description": "Vi-polysaccharide"
+          },
+          {
+            "key": "SARS-CoV-2",
+            "description": "Severe acute respiratory syndrome-related coronavirus 2"
+          }
+        ]
+      }
+    }
+  },
+
+  "card": {
+    "link": "Перейти"
+  },
+  "tabs": {
+    "home": "Главный",
+    "info": "Информация"
+  }
 }
