feat: info screen - deseases links

--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -109,7 +109,44 @@
       }
     }
   },
-
+  "info": {
+    "title": "Информация",
+    "links": [
+      {
+        "href": "/info/characteristics",
+        "name": "Основные характеристики вакцин"
+      },
+      {
+        "href": "",
+        "name": ""
+      }
+    ],
+    "characteristics": {
+      "title": "Заболевания",
+      "links": [
+        "Гепатит B",
+        "Haemophilus influenzae типа b",
+        "Дифтерия",
+        "Коклюш",
+        "Корь",
+        "Краснуха",
+        "Пневмококковая инфекция",
+        "Полиомиелит",
+        "Столбняк",
+        "Туберкулез",
+        "Эпидемический паротит",
+        "Бешенство",
+        "Брюшной тиф",
+        "Весенне-летний клещевой энцефалит",
+        "Чума",
+        "COVID-19",
+        "Гепатит A",
+        "Грипп",
+        "Сибирская язва",
+        "Туляремия"
+      ]
+    }
+  },
   "card": {
     "link": "Перейти"
   },
