feat: test screen

--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -135,6 +135,14 @@
       {
         "href": "/info/time",
         "name": "Сроки проведения обязательных профилактических прививок в рамках гарантированного объема медицинской помощи"
+      },
+      {
+        "href": "/info/test",
+        "name": "Тестирование"
+      },
+      {
+        "href": "/info/test",
+        "name": "О приложении"
       }
     ],
     "characteristics": {
@@ -203,6 +211,236 @@
     "time": {
       "title": "Сроки проведения обязательных профилактических прививок в рамках гарантированного объема медицинской помощи",
       "data": "<container><zero>\tИнфекционные заболевания, против которых прививки проводятся за счет республиканского бюджета</zero><one>Плановые профилактические прививки:</one><two>Возраст прививаемых: 11 лет (девочки)</two><two>Заболевание: Вызванное вирусом папилломы человека</two><two>Возраст прививаемых: 11,5 лет (девочки)</two><two>Заболевание: Вызванное вирусом папилломы человека</two><one>Профилактические прививки по эпидемиологическим показаниям:</one><two>Контингент прививаемых: По эпидемиологическим показаниям</two><two>Заболевание: Коронавирусная инфекция</two><zero>\tИнфекционные и паразитарные заболевания, против которых профилактические прививки проводятся за счет средств местных бюджетов:</zero><zero>Возраст прививаемых и соответствующие вакцины:</zero><one>1-4 дня:</one><two>Туберкулез,Вирусный гепатит 'В'</two><one>2 месяца:</one><two>Вирусный гепатит 'В', Полиомиелит, Коклюш, дифтерия, столбняк, Гемофильная инфекция типа b, Пневмококковая инфекция</two><one>3 месяца:</one><two>Полиомиелит, Коклюш, дифтерия, столбняк, Гемофильная инфекция типа b</two><one>4 месяца:</one><two>Вирусный гепатит 'В', Полиомиелит, Коклюш, дифтерия, столбняк, Гемофильная инфекция типа b, Пневмококковая инфекция</two><one>12-15 месяцев:</one><two>Полиомиелит, Пневмококковая инфекция, Корь, краснуха, паротит</two><one>18 месяцев:</one><two>Полиомиелит, Коклюш, дифтерия, столбняк, Гемофильная инфекция типа b</two><one>2 года:</one><two>Вирусный гепатит 'А'</two><one>2,5 года:</one><two>Вирусный гепатит 'А'</two><one>6 лет (1 класс):</one><two>Коклюш, дифтерия, столбняк, Корь, краснуха, паротит</two><one>16 лет и через каждые 10 лет:</one><two>Дифтерия, столбняк</two><zero>Профилактические прививки по эпидемиологическим показаниям:</zero><one>Лица, относящиеся к группам риска по роду своей профессиональной деятельности, в том числе: медицинские работники:</one><two>Вирусный гепатит B</two><two>Грипп</two><one>Лица, получившие травмы, ранения с нарушением целостности кожных покровов и слизистых:</one><two>Вирусный гепатит B</two><one>Дети, состоящие на динамическом наблюдении в медицинской организации:</one><two>Грипп</two><one>Лица, получившие переливание крови:</one><two>Вирусный гепатит A</two><two>Вирусный гепатит B</two><one>Дети-сироты и дети, оставшиеся без попечения родителей, обучающиеся или воспитывающиеся в организациях для детей-сирот и детей, оставшихся без попечения родителей, а также лица медико-социальных учреждений для престарелых и лиц с инвалидностью:</one><two>Грипп</two><one>По эпидемиологическим показаниям:</one><two>Дифтерия, столбняк</two><two>Корь, краснуха, паротит</two><one>Население, проживающее и работающее в природных очагах инфекционных заболеваний:</one><two>Брюшной тиф</two><two>Весенне-летний клещевой энцефалит</two><two>Сибирская язва</two><one>Лица, относящиеся к группам риска по роду своей профессиональной деятельности, в том числе: работники канализационных и очистных сооружений:</one><two>Брюшной тиф</two><one>Сотрудники научно-исследовательских организаций, лабораторий, в том числе персонал, проводящий отбор проб, вивариев, организаций и учреждений, проводящих исследования на наличие возбудителя бешенства и работающих с животными:</one><two>Бешенство</two><one>Лица, выполняющие работу по отлову и содержанию безнадзорных животных:</one><two>Бешенство</two><one>Сотрудники органов охотничьего и лесного хозяйств, егери, работники убойных пунктов (площадок), таксидермисты, кинологи:</one><two>Бешенство</two><one>Сотрудники организаций здравоохранения, участвующих в проведении парентеральных вмешательств больным бешенством, и патологоанатомы:</one><two>Бешенство</two><one>Лица, подвергшиеся укусу или ослюнению любым животным:</one><two>Бешенство</two></container>"
+    },
+    "test": {
+      "title": "Тестирование",
+      "data": [
+        {
+          "question": "1. Об утверждении Санитарных правил \"Санитарно-эпидемиологические требования к организации и проведению профилактических прививок населению\" от:",
+          "answers": [
+            "21 сентября 2023г №150",
+            "15 октября 2022г №152",
+            "02 августа 2023г №510",
+            "11 ноября 2021г №23",
+            "29 апреля 2023г № 865"
+          ],
+          "correct_answer": "21 сентября 2023г №150"
+        },
+        {
+          "question": "2. По своему составу вакцины могут быть:",
+          "answers": [
+            "моновакцины, ассоциированные вакцины",
+            "химические, анатоксины",
+            "убитые",
+            "смешанные",
+            "ассоциированные вакцины, смешанные, убитые вакцины"
+          ],
+          "correct_answer": "ассоциированные вакцины, смешанные, убитые вакцины"
+        },
+        {
+          "question": "3. Что такое иммунопрофилактика:",
+          "answers": [
+            "осуществляет защиту организма от чужеродных агентов",
+            "формируется в процессе жизни человека и является специфическим",
+            "имитация естественного инфекционного процесса с благоприятным исходом",
+            "защита от инфекций путем оздоровления организма в целом",
+            "способ индивидуальной или массовой защиты людей от инфекций"
+          ],
+          "correct_answer": "способ индивидуальной или массовой защиты людей от инфекций"
+        },
+        {
+          "question": "4. Требования к вакцинам:",
+          "answers": [
+            "безопасность, иммуногенность, безболезненность, стабильность, ареактогенность, возможность ассоциирования, стандартность",
+            "безопасность, иммуногенность, эффективность, стабильность, ареактогенность, возможность ассоциирования, стандартность",
+            "безопасность, иммуногенность, стабильность, доступность, ареактогенность, возможность ассоциирования, стандартность",
+            "безопасность, иммуногенность, стабильность, ареактогенность, возможность ассоциирования, стандартность",
+            "безопасность, иммуногенность, стабильность, ареактогенность, безболезненность, доступность, стандартность"
+          ],
+          "correct_answer": "безопасность, иммуногенность, эффективность, стабильность, ареактогенность, возможность ассоциирования, стандартность"
+        },
+        {
+          "question": "5. Активный естественный иммунитет образуется путем....",
+          "answers": [
+            "Переболевание инфекционной болезнью",
+            "Носительство возбудителя",
+            "Введение живой вакцины",
+            "Введение химической вакцины",
+            "Попадание в организм дробных доз возбудителя при общении с источником инфекции"
+          ],
+          "correct_answer": "Переболевание инфекционной болезнью"
+        },
+        {
+          "question": "6. Пассивный искусственный иммунитет образуется путем…",
+          "answers": [
+            "введение гетерологичного иммуноглобулина",
+            "введение гетерологичной сыворотки",
+            "введение гомологичного иммуноглобулина",
+            "введение интерферона",
+            "введение рекомбинантной вакцины"
+          ],
+          "correct_answer": "введение гетерологичной сыворотки"
+        },
+        {
+          "question": "7. Из предложенного списка выберите живые вакцины:",
+          "answers": [
+            "паротитная вакцина",
+            "брюшнотифозная вакцина",
+            "БЦЖ",
+            "лептоспирозная вакцина",
+            "полиомиелитная вакцина"
+          ],
+          "correct_answer": "БЦЖ"
+        },
+        {
+          "question": "8. «Холодовая цепь» - это ...",
+          "answers": [
+            "Охлаждение препарата перед введением для обеспечения лучшего иммуногенного эффекта",
+            "Контроль температурного режима при транспортировке вакцин от изготовителя до потребителя",
+            "Система контроля температурного режима при хранении вакцин",
+            "Система контроля температурного режима при хранении и транспортировке вакцин от завода изготовителя до приваемого лица",
+            "Система визуального контроля целостности вакцин от места изготовителя до приваемого"
+          ],
+          "correct_answer": "Система контроля температурного режима при хранении и транспортировке вакцин от завода изготовителя до приваемого лица"
+        },
+        {
+          "question": "9. Допуск к проведению профилактических прививок дает:",
+          "answers": [
+            "Детский невропатолог",
+            "Инфекционист",
+            "Врач общей практики/педиатр",
+            "Эпидемиолог",
+            "Медицинская сестра процедурного кабинета"
+          ],
+          "correct_answer": "Врач общей практики/педиатр"
+        },
+        {
+          "question": "10. Вакцина БЦЖ содержит:",
+          "answers": [
+            "инактивированную культуру микобактерий туберкулеза",
+            "микобактерии коровьего типа",
+            "вакцинный штамм микобактерий туберкулеза бычьего типа",
+            "вакцинный штамм коринебактерий",
+            "вакцинный штамм менингококковых бактерий"
+          ],
+          "correct_answer": "вакцинный штамм микобактерий туберкулеза бычьего типа"
+        },
+        {
+          "question": "11. Как вводить БЦЖ вакцину при вакцинации:",
+          "answers": [
+            "накожно",
+            "внутрикожно",
+            "подкожно",
+            "через рот",
+            "внутривенно"
+          ],
+          "correct_answer": "внутрикожно"
+        },
+        {
+          "question": "12. Укажите, кого из перечисленных детей можно вакцинировать в родильном доме против туберкулеза?",
+          "answers": [
+            "здорового ребенка (3800 гр) на 5-й день жизни",
+            "недоношенного ребенка (2400 гр) на 7-й день жизни",
+            "недоношенного ребенка (1900 гр) на 8-й день жизни",
+            "ребенка (3200 гр), 5-й день жизни, температура тела 37,8 С",
+            "ребенка (3200 гр), 5-й день жизни с омфалитом"
+          ],
+          "correct_answer": "здорового ребенка (3800 гр) на 5-й день жизни"
+        },
+        {
+          "question": "13. Вакцина гепатита В:",
+          "answers": [
+            "«живая»",
+            "инактивированная",
+            "химическая",
+            "рекомбинантная",
+            "анатоксин"
+          ],
+          "correct_answer": "рекомбинантная"
+        },
+        {
+          "question": "14. Полиомиелитную вакцину ребенку следует дать:",
+          "answers": [
+            "за 3 часа до еды",
+            "за 1 час до еды",
+            "во время еды",
+            "после еды спустя",
+            "утром натощак"
+          ],
+          "correct_answer": "за 1 час до еды"
+        },
+        {
+          "question": "15. Противопоказаниями к введению АКДС-вакцины являются:",
+          "answers": [
+            "судорожный синдром в анамнезе",
+            "злокачественные заболевания крови",
+            "переболевание гриппом 4 нед. назад",
+            "повышение температуры тела до 37,8 С после первой прививки",
+            "отек Квинке после предыдущей прививки"
+          ],
+          "correct_answer": "судорожный синдром в анамнезе"
+        },
+        {
+          "question": "16. К поствакцинальным осложнениям на прививку АКДС-вакциной относят:",
+          "answers": [
+            "эпизоды пронзительного крика",
+            "судороги на фоне повышенной температуры тела",
+            "гиперемию и инфильтрат на месте введения вакцины",
+            "отек Квинке",
+            "повышение температуры тела до 38 С"
+          ],
+          "correct_answer": "судороги на фоне повышенной температуры тела"
+        },
+        {
+          "question": "17. Коревая вакцина содержит:",
+          "answers": [
+            "инактивированный вирус кори",
+            "живой вирус краснухи",
+            "живой вакцинный штамм вируса кори",
+            "инактивированный вакцинный штамм вируса кори",
+            "инактивированный вакцинный штамм вируса краснухи"
+          ],
+          "correct_answer": "живой вакцинный штамм вируса кори"
+        },
+        {
+          "question": "18. В какой из перечисленных ниже сроков дети прививаются АКДС-вакциной?",
+          "answers": [
+            "до 4 дня жизни",
+            "в 2,3, 4 месяца без ревакцинации",
+            "в 2, 3, 4 месяца с ревакцинацией в 18 месяцев",
+            "до 4 дня жизни с ревакцинацией в 6-7 лет",
+            "до 4 дня жизни с ревакцинацией в 2,3, 4 месяца"
+          ],
+          "correct_answer": "в 2, 3, 4 месяца с ревакцинацией в 18 месяцев"
+        },
+        {
+          "question": "19. Плановой вакцинации против краснухи подлежат:",
+          "answers": [
+            "дети в возрасте до 6 мес",
+            "дети от 6 мес до 12 мес",
+            "дети в возрасте 12-15 мес, ревакцинация в 18 мес",
+            "девочки 13 лет, неболевшие и не привитые против краснухи",
+            "мальчики 13 лет, неболевшие и не привитые против краснухи"
+          ],
+          "correct_answer": "дети в возрасте 12-15 мес, ревакцинация в 18 мес"
+        },
+        {
+          "question": "20. Обязательность плановых прививок детям против инфекционных заболеваний в РК определяется",
+          "answers": [
+            "рекомендациями ВОЗ",
+            "указанием центров Госсанэпиднадзора",
+            "приказом акима данной территории",
+            "приказом лечебно-профилактического учреждения",
+            "Законом о санитарно-эпидемиологическом благополучии населения РК, календарем прививок, утвержденным приказом МЗ РК"
+          ],
+          "correct_answer": "Законом о санитарно-эпидемиологическом благополучии населения РК, календарем прививок, утвержденным приказом МЗ РК"
+        }
+      ],
+      "checkButton": "Проверить",
+      "alert": {
+        "error": "Вы ответили не на все вопросы.",
+        "res": "Правильные ответы : {{right}} \nНеправильные ответы : {{wrong}}"
+      }
     }
   },
   "card": {
