feat: tablet  adaptive

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -2,5 +2,9 @@
   "tabs": {
     "home": "Главный",
     "info": "Информация"
+  },
+  "settings": {
+    "title": "Settings",
+    "lang": "Language"
   }
 }
