--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -446,6 +446,10 @@
   "card": {
     "link": "Перейти"
   },
+  "settings": {
+    "title": "Настройки",
+    "lang": "Язык"
+  },
   "tabs": {
     "home": "Главный",
     "info": "Информация"
