--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -141,7 +141,7 @@
         "name": "Тестирование"
       },
       {
-        "href": "/info/test",
+        "href": "/info/about",
         "name": "О приложении"
       }
     ],
@@ -216,224 +216,224 @@
       "title": "Тестирование",
       "data": [
         {
-          "question": "1. Об утверждении Санитарных правил \"Санитарно-эпидемиологические требования к организации и проведению профилактических прививок населению\" от:",
+          "question": "1. Об утверждении Санитарных правил 'Санитарно-эпидемиологические требования к организации и проведению профилактических прививок населению' от:",
           "answers": [
-            "21 сентября 2023г №150",
-            "15 октября 2022г №152",
-            "02 августа 2023г №510",
-            "11 ноября 2021г №23",
-            "29 апреля 2023г № 865"
+            "А. 21 сентября 2023г №150",
+            "Б. 15 октября 2022г №152",
+            "В. 02 августа 2023г №510",
+            "Г. 11 ноября 2021г №23",
+            "Д. 29 апреля 2023г №865"
           ],
-          "correct_answer": "21 сентября 2023г №150"
+          "correct_answer": "А. 21 сентября 2023г №150"
         },
         {
           "question": "2. По своему составу вакцины могут быть:",
           "answers": [
-            "моновакцины, ассоциированные вакцины",
-            "химические, анатоксины",
-            "убитые",
-            "смешанные",
-            "ассоциированные вакцины, смешанные, убитые вакцины"
+            "А. моновакцины, ассоциированные вакцины",
+            "Б. химические, анатоксины",
+            "В. убитые",
+            "Г. смешанные",
+            "Д. ассоциированные вакцины, смешанные, убитые вакцины"
           ],
-          "correct_answer": "ассоциированные вакцины, смешанные, убитые вакцины"
+          "correct_answer": "А. моновакцины, ассоциированные вакцины"
         },
         {
           "question": "3. Что такое иммунопрофилактика:",
           "answers": [
-            "осуществляет защиту организма от чужеродных агентов",
-            "формируется в процессе жизни человека и является специфическим",
-            "имитация естественного инфекционного процесса с благоприятным исходом",
-            "защита от инфекций путем оздоровления организма в целом",
-            "способ индивидуальной или массовой защиты людей от инфекций"
+            "А. осуществляет защиту организма от чужеродных агентов",
+            "Б. формируется в процессе жизни человека и является специфическим",
+            "В. имитация естественного инфекционного процесса с благоприятным исходом",
+            "Г. защита от инфекций путем оздоровления организма в целом",
+            "Д. способ индивидуальной или массовой защиты людей от инфекций"
           ],
-          "correct_answer": "способ индивидуальной или массовой защиты людей от инфекций"
+          "correct_answer": "Д. способ индивидуальной или массовой защиты людей от инфекций"
         },
         {
-          "question": "4. Требования к вакцинам:",
+          "question": "4.Требования к вакцинам:",
           "answers": [
-            "безопасность, иммуногенность, безболезненность, стабильность, ареактогенность, возможность ассоциирования, стандартность",
-            "безопасность, иммуногенность, эффективность, стабильность, ареактогенность, возможность ассоциирования, стандартность",
-            "безопасность, иммуногенность, стабильность, доступность, ареактогенность, возможность ассоциирования, стандартность",
-            "безопасность, иммуногенность, стабильность, ареактогенность, возможность ассоциирования, стандартность",
-            "безопасность, иммуногенность, стабильность, ареактогенность, безболезненность, доступность, стандартность"
+            "А. безопасность, иммуногенность, безболезненность, стабильность, ареактогенность, возможность ассоциирования, стандартность",
+            "Б. безопасность, иммуногенность, эффективность, стабильность, ареактогенность, возможность ассоциирования, стандартность",
+            "В. безопасность, иммуногенность, стабильность, доступность, ареактогенность, возможность ассоциирования, стандартность",
+            "Г. безопасность, иммуногенность, стабильность, ареактогенность, возможность ассоциирования, стандартность",
+            "Д. безопасность, иммуногенность, стабильность, ареактогенность, безболезненность, доступность, стандартность"
           ],
-          "correct_answer": "безопасность, иммуногенность, эффективность, стабильность, ареактогенность, возможность ассоциирования, стандартность"
+          "correct_answer": "Г. безопасность, иммуногенность, стабильность, ареактогенность, возможность ассоциирования, стандартность"
         },
         {
-          "question": "5. Активный естественный иммунитет образуется путем....",
+          "question": "5. Активный естественный иммунитет образуется путем...",
           "answers": [
-            "Переболевание инфекционной болезнью",
-            "Носительство возбудителя",
-            "Введение живой вакцины",
-            "Введение химической вакцины",
-            "Попадание в организм дробных доз возбудителя при общении с источником инфекции"
+            "А. Переболевание инфекционной болезнью",
+            "Б. Носительство возбудителя",
+            "В. Введение живой вакцины",
+            "Г. Введение химической вакцины",
+            "Д. Попадание в организм дробных доз возбудителя при общении с источником инфекции"
           ],
-          "correct_answer": "Переболевание инфекционной болезнью"
+          "correct_answer": "Б. Носительство возбудителя"
         },
         {
           "question": "6. Пассивный искусственный иммунитет образуется путем…",
           "answers": [
-            "введение гетерологичного иммуноглобулина",
-            "введение гетерологичной сыворотки",
-            "введение гомологичного иммуноглобулина",
-            "введение интерферона",
-            "введение рекомбинантной вакцины"
+            "А. введение гетерологичного иммуноглобулина",
+            "Б. введение гетерологичной сыворотки",
+            "В. введение гомологичного иммуноглобулина",
+            "Г. введение интерферона",
+            "Д. введение рекомбинантной вакцины"
           ],
-          "correct_answer": "введение гетерологичной сыворотки"
+          "correct_answer": "Б. введение гетерологичной сыворотки"
         },
         {
           "question": "7. Из предложенного списка выберите живые вакцины:",
           "answers": [
-            "паротитная вакцина",
-            "брюшнотифозная вакцина",
-            "БЦЖ",
-            "лептоспирозная вакцина",
-            "полиомиелитная вакцина"
+            "А. паротитная вакцина",
+            "Б. брюшнотифозная вакцина",
+            "В. БЦЖ",
+            "Г. лептоспирозная вакцина",
+            "Д. полиомиелитная вакцина"
           ],
-          "correct_answer": "БЦЖ"
+          "correct_answer": "В. БЦЖ"
         },
         {
           "question": "8. «Холодовая цепь» - это ...",
           "answers": [
-            "Охлаждение препарата перед введением для обеспечения лучшего иммуногенного эффекта",
-            "Контроль температурного режима при транспортировке вакцин от изготовителя до потребителя",
-            "Система контроля температурного режима при хранении вакцин",
-            "Система контроля температурного режима при хранении и транспортировке вакцин от завода изготовителя до приваемого лица",
-            "Система визуального контроля целостности вакцин от места изготовителя до приваемого"
+            "А. Охлаждение препарата перед введением для обеспечения лучшего иммуногенного эффекта",
+            "Б. Контроль температурного режима при транспортировке вакцин от изготовителя до потребителя",
+            "В. Система контроля температурного режима при хранении вакцин",
+            "Г. Система контроля температурного режима при хранении и транспортировке вакцин от завода изготовителя до приваемого лица",
+            "Д. Система визуального контроля целостности вакцин от места изготовителя до приваемого"
           ],
-          "correct_answer": "Система контроля температурного режима при хранении и транспортировке вакцин от завода изготовителя до приваемого лица"
+          "correct_answer": "Б. Контроль температурного режима при транспортировке вакцин от изготовителя до потребителя"
         },
         {
-          "question": "9. Допуск к проведению профилактических прививок дает:",
+          "question": "9. Допуск к проведению профилактичеких прививок дает:",
           "answers": [
-            "Детский невропатолог",
-            "Инфекционист",
-            "Врач общей практики/педиатр",
-            "Эпидемиолог",
-            "Медицинская сестра процедурного кабинета"
+            "А. Детский невропатолог",
+            "Б. Инфекционист",
+            "В. Врач общей практики/педиатр",
+            "Г. Эпидемиолог",
+            "Д. Медицинская сестра процедурного кабинета"
           ],
-          "correct_answer": "Врач общей практики/педиатр"
+          "correct_answer": "В. Врач общей практики/педиатр"
         },
         {
           "question": "10. Вакцина БЦЖ содержит:",
           "answers": [
-            "инактивированную культуру микобактерий туберкулеза",
-            "микобактерии коровьего типа",
-            "вакцинный штамм микобактерий туберкулеза бычьего типа",
-            "вакцинный штамм коринебактерий",
-            "вакцинный штамм менингококковых бактерий"
+            "А. инактивированную культуру микобактерий туберкулеза",
+            "Б. микобактерии коровьего типа",
+            "В. вакцинный штамм микобактерий туберкулеза бычьего типа",
+            "Г. вакцинный штамм коринебактерий",
+            "Д. вакцинный штамм менингококковых бактерий"
           ],
-          "correct_answer": "вакцинный штамм микобактерий туберкулеза бычьего типа"
+          "correct_answer": "В. вакцинный штамм микобактерий туберкулеза бычьего типа"
         },
         {
           "question": "11. Как вводить БЦЖ вакцину при вакцинации:",
           "answers": [
-            "накожно",
-            "внутрикожно",
-            "подкожно",
-            "через рот",
-            "внутривенно"
+            "А. накожно",
+            "Б. внутрикожно",
+            "В. подкожно",
+            "Г. через рот",
+            "Д. внутривенно"
           ],
-          "correct_answer": "внутрикожно"
+          "correct_answer": "В. подкожно"
         },
         {
           "question": "12. Укажите, кого из перечисленных детей можно вакцинировать в родильном доме против туберкулеза?",
           "answers": [
-            "здорового ребенка (3800 гр) на 5-й день жизни",
-            "недоношенного ребенка (2400 гр) на 7-й день жизни",
-            "недоношенного ребенка (1900 гр) на 8-й день жизни",
-            "ребенка (3200 гр), 5-й день жизни, температура тела 37,8 С",
-            "ребенка (3200 гр), 5-й день жизни с омфалитом"
+            "А. здорового ребенка (3800 гр) на 5-й день жизни",
+            "Б. недоношенного ребенка (2400 гр) на 7-й день жизни",
+            "В. недоношенного ребенка (1900 гр) на 8-й день жизни",
+            "Г. ребенка (3200 гр), 5-й день жизни, температура тела 37,8 С",
+            "Д. ребенка (3200 гр), 5-й день жизни с омфалитом"
           ],
-          "correct_answer": "здорового ребенка (3800 гр) на 5-й день жизни"
+          "correct_answer": "А. здорового ребенка (3800 гр) на 5-й день жизни"
         },
         {
           "question": "13. Вакцина гепатита В:",
           "answers": [
-            "«живая»",
-            "инактивированная",
-            "химическая",
-            "рекомбинантная",
-            "анатоксин"
+            "А. «живая»",
+            "Б. инактивированная",
+            "В. химическая",
+            "Г. рекомбинантная",
+            "Д. анатоксин"
           ],
-          "correct_answer": "рекомбинантная"
+          "correct_answer": "Г. рекомбинантная"
         },
         {
-          "question": "14. Полиомиелитную вакцину ребенку следует дать:",
+          "question": "14. Полиемиелитную вакцину ребенку следует дать:",
           "answers": [
-            "за 3 часа до еды",
-            "за 1 час до еды",
-            "во время еды",
-            "после еды спустя",
-            "утром натощак"
+            "А. за 3 часа до еды",
+            "Б. за 1 час до еды",
+            "В. во время еды",
+            "Г. после еды",
+            "Д. утром натощак"
           ],
-          "correct_answer": "за 1 час до еды"
+          "correct_answer": "А. за 3 часа до еды"
         },
         {
           "question": "15. Противопоказаниями к введению АКДС-вакцины являются:",
           "answers": [
-            "судорожный синдром в анамнезе",
-            "злокачественные заболевания крови",
-            "переболевание гриппом 4 нед. назад",
-            "повышение температуры тела до 37,8 С после первой прививки",
-            "отек Квинке после предыдущей прививки"
+            "А. судорожный синдром в анамнезе",
+            "Б. злокачественные заболевания крови",
+            "В. переболевание гриппом 4 нед. назад",
+            "Г. повышение температуры тела до 37,8 С после первой прививки",
+            "Д. отек Квинке после предыдущей прививки"
           ],
-          "correct_answer": "судорожный синдром в анамнезе"
+          "correct_answer": "А. судорожный синдром в анамнезе"
         },
         {
           "question": "16. К поствакцинальным осложнениям на прививку АКДС-вакциной относят:",
           "answers": [
-            "эпизоды пронзительного крика",
-            "судороги на фоне повышенной температуры тела",
-            "гиперемию и инфильтрат на месте введения вакцины",
-            "отек Квинке",
-            "повышение температуры тела до 38 С"
+            "А. эпизоды пронзительного крика",
+            "Б. судороги на фоне повышенной температуры тела",
+            "В. гиперемию и инфильтрат на месте введения вакцины",
+            "Г. отек Квинке",
+            "Д. повышение температуры тела до 38 С"
           ],
-          "correct_answer": "судороги на фоне повышенной температуры тела"
+          "correct_answer": "Г. отек Квинке"
         },
         {
           "question": "17. Коревая вакцина содержит:",
           "answers": [
-            "инактивированный вирус кори",
-            "живой вирус краснухи",
-            "живой вакцинный штамм вируса кори",
-            "инактивированный вакцинный штамм вируса кори",
-            "инактивированный вакцинный штамм вируса краснухи"
+            "А. инактивированный вирус кори",
+            "Б. живой вирус краснухи",
+            "В. живой вакцинный штамм вируса кори",
+            "Г. инактивированный вакцинный штамм вируса кори",
+            "Д. инактивированный вакцинный штамм вируса краснухи"
           ],
-          "correct_answer": "живой вакцинный штамм вируса кори"
+          "correct_answer": "В. живой вакцинный штамм вируса кори"
         },
         {
           "question": "18. В какой из перечисленных ниже сроков дети прививаются АКДС-вакциной?",
           "answers": [
-            "до 4 дня жизни",
-            "в 2,3, 4 месяца без ревакцинации",
-            "в 2, 3, 4 месяца с ревакцинацией в 18 месяцев",
-            "до 4 дня жизни с ревакцинацией в 6-7 лет",
-            "до 4 дня жизни с ревакцинацией в 2,3, 4 месяца"
+            "А. до 4 дня жизни",
+            "Б. в 2,3, 4 месяца без ревакцинации",
+            "В. в 2, 3, 4 месяца с ревакцинацией в 18 месяцев",
+            "Г. до 4 дня жизни с ревакцинацией в 6-7 лет",
+            "Д. до 4 дня жизни с ревакцинацией в 2,3, 4 месяца"
           ],
-          "correct_answer": "в 2, 3, 4 месяца с ревакцинацией в 18 месяцев"
+          "correct_answer": "В. в 2, 3, 4 месяца с ревакцинацией в 18 месяцев"
         },
         {
           "question": "19. Плановой вакцинации против краснухи подлежат:",
           "answers": [
-            "дети в возрасте до 6 мес",
-            "дети от 6 мес до 12 мес",
-            "дети в возрасте 12-15 мес, ревакцинация в 18 мес",
-            "девочки 13 лет, неболевшие и не привитые против краснухи",
-            "мальчики 13 лет, неболевшие и не привитые против краснухи"
+            "А. дети в возрасте до 6 мес",
+            "Б. дети от 6 мес до 12 мес",
+            "В. дети в возрасте 12-15 мес, ревакцинация в 18 мес",
+            "Г. девочки 13 лет, неболевшие и не привитые против краснухи",
+            "Д. мальчики 13 лет, неболевшие и не привитые против краснухи"
           ],
-          "correct_answer": "дети в возрасте 12-15 мес, ревакцинация в 18 мес"
+          "correct_answer": "В. дети в возрасте 12-15 мес, ревакцинация в 18 мес"
         },
         {
           "question": "20. Обязательность плановых прививок детям против инфекционных заболеваний в РК определяется",
           "answers": [
-            "рекомендациями ВОЗ",
-            "указанием центров Госсанэпиднадзора",
-            "приказом акима данной территории",
-            "приказом лечебно-профилактического учреждения",
-            "Законом о санитарно-эпидемиологическом благополучии населения РК, календарем прививок, утвержденным приказом МЗ РК"
+            "А. рекомендациями ВОЗ",
+            "Б. указанием центров Госсанэпиднадзора",
+            "В. приказом акима данной территории",
+            "Г. приказом лечебно-профилактического учреждения",
+            "Д. Законом о санитарно-эпидемиологическом благополучии населения РК, календарем прививок, утвержденным приказом МЗ РК"
           ],
-          "correct_answer": "Законом о санитарно-эпидемиологическом благополучии населения РК, календарем прививок, утвержденным приказом МЗ РК"
+          "correct_answer": "Д. Законом о санитарно-эпидемиологическом благополучии населения РК, календарем прививок, утвержденным приказом МЗ РК"
         }
       ],
       "checkButton": "Проверить",
